# remote-hosts

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml  run.sh  setup.py  test_i18n_en.py
.github/workflows/: ci.yml  release.yml
remote_hosts/: cli.py  color.py  i18n.py  locale.py  locale_utils.py  manual.txt  manual_zh.txt  setup.py
scripts/: builder.sh  i18n_test.sh
tests/: __init__.py  conftest.py  test_cli.py  test_color.py  test_config.py  test_i18n.py  test_locale.py  test_locale_utils.py  test_main.py
